Make Element#innerText not to emit a space after inline-block and before block

This patch makes Element#innerText not to emit a space after inline-block and
before block for improving interop.

This patch fixes regression caused by the patch[1].

[1] http://crrev.com/c/1250825 Make Element#innerText to not collapse white
space around inline-block

Bug: 892500
Cq-Include-Trybots: luci.chromium.try:linux_layout_tests_layout_ng
Change-Id: I4343c0d74f3445263a209697aaf3c24aef82a900
Reviewed-on: https://chromium-review.googlesource.com/c/1264339
Reviewed-by: Xiaocheng Hu <xiaochengh@chromium.org>
Commit-Queue: Yoshifumi Inoue <yosin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#597879}
Former-commit-id: cc124c8111b278045f0e8e031e4bce10dafad2df